--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -48,6 +48,12 @@
 
     gap: 10px;
 
+.text-field{
+  background-color: white;
+  background-color: white;
+      padding: 7px;
+      border-radius: 10px;
+}
     .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
       background-color: white;
       padding: 7px;
